# spark_basic_project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: hello_world.py
resources/hql/test_db/: basic_table.hql
tests/apps/: test__hello_world.py
utils/: logger.py  testing.py  utils.py  variables.py
