[tool.poetry]
name = "sparktests"
version = "0.1.0"
description = ""
authors = ["alexchikov <alex.chikov@outlook.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.4.3"
pytest = "^9.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

